# secureboot-watchdog

./: .gitignore  LICENSE  README.md  devbox.json
debian/: changelog  control  copyright  install  postinst  prerm  rules  secureboot-watchdog.lintian-overrides
desktop/: secureboot-notify.desktop
kernel/: zzz-secureboot-recheck
polkit/: com.localhost.secureboot.fix.policy
sbin/: secureboot-check  secureboot-fix
systemd/: secureboot-dkms.path  secureboot-monitor.service  secureboot-monitor.timer
systemd/user/: secureboot-notify.path  secureboot-notify.service
ui/: Cargo.toml  build.rs
ui/blueprints/: screen1_healthy.blp  screen2_issues.blp  screen3_details.blp  screen4_luks.blp  screen5_mok.blp  screen6_progress.blp  screen7_done.blp  screen8_failed.blp
ui/data/: io.github.gitii.SecurebootWatchdog.desktop  io.github.gitii.SecurebootWatchdog.gresource.xml  style.css
ui/fixtures/: screen1_healthy.json  screen2_multi.json  screen3_info_sb_disabled.json  screen4_luks_tpm.json  screen5_mok_signature.json  screen6_progress.json  screen7_done.json  screen8_failed.json
ui/src/: application.rs  main.rs  mock.rs  pkexec.rs  status.rs
ui/src/widgets/: issue_row.rs  mod.rs  step_list.rs
ui/src/window/: app_window.rs  details.rs  fix_flow.rs  mod.rs  overview.rs
