[package]
name = "secureboot-watchdog-ui"
version = "0.6.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Native libadwaita UI for the Secure Boot watchdog post-notification fix flow"
repository = "https://github.com/Gitii/secureboot-watchdog"

[[bin]]
name = "secureboot-watchdog-ui"
path = "src/main.rs"

[dependencies]
gtk = { package = "gtk4", version = "0.9", features = ["v4_10"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
glib = "0.20"
gio = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
futures = "0.3"
futures-channel = "0.3"
zeroize = "1"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
